# cmd/handlers.go
@@ -161,6 +161,7 @@ func initHTTPHandlers(e *echo.Echo, a *App) {
 		// Individual list permissions are applied directly within handleGetLists.
 		g.GET("/api/lists", a.GetLists)
 		g.GET("/api/lists/scrub", pm(a.GetScrubListStatus, "settings:manage"))
+		g.GET("/api/lists/scrub/history", pm(a.GetScrubHistory, "settings:manage"))
 		g.POST("/api/lists/:id/scrub", hasID(pm(a.ScrubList, "settings:manage")))
 		g.GET("/api/lists/:id", hasID(a.GetList))
 		g.POST("/api/lists", pm(a.CreateList, "lists:manage_all"))
